--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
+		"svelte-hero-icons": "^5.0.0",
 		"svelte-preprocess": "^5.0.3",
 		"tailwindcss": "^3.3.1",
 		"vite": "^4.3.0"
